--- a/class08/d007.html
+++ b/class08/d007.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,10 +8,14 @@
     <h1>JavaScript Programming Logic</h1>
     
     <script>
-        var n1 = Number(prompt('Text a number:'));
-        var n2 = Number(prompt('Text a another number:'));
+        for (var y = 1004; y <= 2024; y += 4) {
+            if (y % 100 != 0 || y % 400 == 0) {
+                document.write(`Year ${y} <br>`);
+            } else {
+                document.write(`Year ${y} Is not a leap year <br>`)
+            }
+        }
 
-        alert((n1 + n2) / 2 > 5);
     </script>
 </body>
 </html>
