end of introduction and 2 operator exercises

--- a/introduction/example05.html
+++ b/introduction/example05.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Show the average</h1>
+    <h1>Challenge 2</h1>
 
     <script>
         let n = 10;
