--- a/logical-operator/exercise01.html
+++ b/logical-operator/exercise01.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercise 2</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Exercise 2</h1>
+    <h1>Logical operators</h1>
 
     <script>
         let n1 = Number(prompt('Text a number from 0 to 10:'));
         let n2 = Number(prompt('Text a another number from 0 to 10:'));
+        let average = (n1 + n2) / 2;
 
-        alert(`Is the average greater than 7? ${(n1 + n2) / 2 > 7}`);
+        alert(`Is it approved? ${average > 4 && n1 > 0 && n2 > 0}`);
 
     </script>
 </body>
